# ClauseGuide-AI

./: .gitignore  README.md  docker-compose.yml  render.yaml
backend/: README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: analysis.py  auth.py  chat.py  clauses.py  dashboard.py  documents.py  evaluations.py  markdown.py  reports.py  review.py
backend/app/core/: auth.py  database.py  security.py  settings.py
backend/app/models/: __init__.py  chat.py  clause.py  document.py  evaluation.py  markdown.py  report.py  user.py
backend/app/schemas/: auth_schema.py  chat_schema.py  dashboard_schema.py  document_schema.py  evaluation_schema.py  markdown_schema.py  report_schema.py  review_schema.py  verification_schema.py
backend/app/services/: analysis_service.py  auth_service.py  chat_service.py  chunker.py  citation_verifier.py  clause_extractor.py  clause_normalizer.py  clause_service.py  confidence_scorer.py  contract_type_detector.py  dashboard_service.py  document_classifier.py  document_parser.py  document_review_service.py  document_service.py  email_service.py  (+18 more)
backend/legal-risk-kb/: README.md
backend/scripts/: import_cuad.py
backend/tests/: test_architecture_pipeline.py  test_auth_security.py  test_chunking.py  test_citations.py  test_clause_extractor.py  test_confidence_scorer.py  test_contract_type_detector.py  test_evaluation_service.py  test_legal_kb_service.py  test_query_intent_detector.py  test_report_service.py  test_reranker.py  test_retrieval.py  test_risk_engine.py  test_sso_policy.py  test_text_cleaner.py
(+43 files in other folders)
