[project]
name = "clauseguide-backend"
version = "0.1.0"
description = "ClauseGuide AI backend (Part 1 MVP foundation)"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.31",
  "aiosqlite>=0.20.0",
  "pydantic>=2.8.2",
  "email-validator>=2.2.0",
  "pydantic-settings>=2.3.4",
  "python-multipart>=0.0.9",
  "pymupdf>=1.24.7",
  "python-docx>=1.1.2",
  "openai>=1.40.0",
  "numpy>=1.26.4",
  "orjson>=3.10.6",
  "greenlet>=3.0.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.8",
  "ruff>=0.5.6",
  "mypy>=1.11.1",
]
embeddings = [
  "sentence-transformers>=3.0.1",
]
evaluation = [
  "ragas>=0.2.0",
  "datasets>=2.20.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N", "ASYNC", "RUF"]
ignore = ["E203"]

[tool.setuptools]
packages = ["app", "app.api", "app.core", "app.models", "app.schemas", "app.services"]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"
